feat: :sparkles: Major changes
Custom plugins, refactorings

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -7,8 +7,9 @@
 PWD="./"
 
 # Subscriby
-SUBSCRIBY_AUTH_METHOD="none"  # `none` or `secret`
+SUBSCRIBY_AUTH_METHOD="none"  # `none`, `secret` or `custom
 SUBSCRIBY_AUTH_SECRET=""
+SUBSCRIBY_EXPIRES_DATE_FORMAT = "%Y.%m.%d"
 
 # Docker compose settings,
 # actually, main thing you want to see or change (port, names)
