feat(subscriby): :sparkles: Webhooks, config changes, logging improvements

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -9,7 +9,8 @@ PWD="./"
 # Subscriby
 SUBSCRIBY_AUTH_METHOD="none"  # `none`, `secret` or `custom
 SUBSCRIBY_AUTH_SECRET=""
-SUBSCRIBY_EXPIRES_DATE_FORMAT = "%Y.%m.%d"
+SUBSCRIBY_DATE_FORMAT = "%Y.%m.%d"
+SUBSCRIBY_WEBHOOK_TARGETS = []
 
 # Docker compose settings,
 # actually, main thing you want to see or change (port, names)
