feat(api): :sparkles: Rework build stack for backend

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,10 +1,4 @@
-# Example environment, copy to the `.env`!
-# Used for docker compose.
-# See core configuration for more information.
-
-# Docker path under which it should run applications,
-# by default, should not be changed.
-PWD="./"
+# Example environment, copy to `.env` (Used for docker compose)
 
 # Subscriby
 SUBSCRIBY_AUTH_METHOD="none"  # `none`, `secret` or `custom
@@ -12,25 +6,20 @@ SUBSCRIBY_AUTH_SECRET=""
 SUBSCRIBY_DATE_FORMAT = "%Y.%m.%d"
 SUBSCRIBY_WEBHOOK_TARGETS = []
 
-# Docker compose settings,
-# actually, main thing you want to see or change (port, names)
-COMPOSE_PROJECT_NAME="subscriby-example"
+# Docker compose
+PWD="./"
+COMPOSE_PROJECT_NAME="subscriby-backend-api"
 COMPOSE_EXPOSED_PORT=80
 
-# Gunicorn settings.
-# Bindance.
+# Process manager (Gunicorn)
+PROC_OS_NAME="subscriby-backend-api"
 PROC_BIND_HOST = "0.0.0.0"
 PROC_BIND_PORT = 80
-# Logging.
-PROC_LOG_TO_STDOUT = true
-PROC_ACCESS_LOG = "-"
-PROC_ERROR_LOG = "-"
-PROC_LOG_LEVEL = "info"
-# Other.
-PROC_TIMEOUT = 30
-PROC_DEBUG_CONFIG = false
-PROC_NAME = "subscriby"
-PROC_OVERWRITE_WORKERS = 1
+PROC_LOG_ACCESS = "-"
+PROC_LOG_ERROR = "-"
+PROC_LOG_LEVEL = "warning"
+PROC_LOG_FORMAT = '%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
+PROC_PERF_WORKERS = 1  # Set to 0 for auto set by CPU corse
 
 # Database.
 POSTGRES_HOST=database
