--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,11 @@
 # syntax=docker/dockerfile:1
 FROM python:3.10.7-alpine
 
-# Settings.
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+
 WORKDIR /etc/subscriby
 
-# Installing packages.
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install --upgrade --no-cache-dir -r requirements.txt
-
-# Copying working files.
+COPY pyproject.toml .
+RUN pip install poetry && poetry install
 COPY . /etc/subscriby
