--- a/backend/.example.env
+++ b/backend/.example.env
@@ -17,13 +17,13 @@ PROC_BIND_HOST = "0.0.0.0"
 PROC_BIND_PORT = 80
 PROC_LOG_ACCESS = "-"
 PROC_LOG_ERROR = "-"
-PROC_LOG_LEVEL = "warning"
+PROC_LOG_LEVEL = "info"
 PROC_LOG_FORMAT = '%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
 PROC_PERF_WORKERS = 1  # Set to 0 for auto set by CPU corse
 
 # Database.
-POSTGRES_HOST=database
-POSTGRES_PASSWORD=subscriby
-POSTGRES_NAME=subscriby
-POSTGRES_USER=subscriby
-POSTGRES_DB=subscriby
+DATABASE_HOST=database
+DATABASE_PASSWORD=subscriby
+DATABASE_NAME=subscriby
+DATABASE_USER=subscriby
+DATABASE_DB=subscriby
