feat(frontends/telegram): :sparkles: Rework telegram bot

--- a/frontends/telegram/.example.env
+++ b/frontends/telegram/.example.env
@@ -1,16 +1,21 @@
-# Example environment, copy to the `.env`!
-# Used for docker compose.
-# See core configuration for more information.
-
-# Docker path under which it should run applications,
-# by default, should not be changed.
-PWD="./"
+# Example environment, copy to `.env` (Used for docker compose)
 
 # Subscriby
-SUBSCRIBY_API_URL="https://subscriby.apiserver.example"
+SUBSCRIBY_API_HOST="https://subscriby.apiserver.example"
 SUBSCRIBY_AUTH_METHOD="none"
 SUBSCRIBY_AUTH_SECRET=""
+SUBSCRIBY_HOOK_PATH = "/hook/subscriby"
 
-# Docker compose settings,
-# actually, main thing you want to see or change (port, names)
-COMPOSE_PROJECT_NAME="subscriby-telegram-example"
+# Telegram
+TELEGRAM_ADMIN_IDS = []
+TELEGRAM_TOKEN = ""
+TELEGRAM_LANGUAGE = "EN"
+TELEGRAM_WEB_HOST = "https://subscriby.apiserver.example/telegram"
+TELEGRAM_HOOK_PATH = "/hook/telegram"
+TELEGRAM_HTTP_INTERNAL_PORT=3000
+TELEGRAM_HTTP_INTERNAL_HOST="0.0.0.0"
+TELEGRAM_REVENUE_CURRENCY = "USD"
+# Docker compose
+PWD="./"
+COMPOSE_PROJECT_NAME="subscriby-frontend-telegram"
+COMPOSE_EXPOSED_PORT=3000
