feat(api): :sparkles: Rework config, webhooks

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,10 +1,19 @@
 # Example environment, copy to `.env` (Used for docker compose)
 
-# Subscriby
-SUBSCRIBY_AUTH_METHOD="none"  # `none`, `secret` or `custom
-SUBSCRIBY_AUTH_SECRET=""
-SUBSCRIBY_DATE_FORMAT = "%Y.%m.%d"
-SUBSCRIBY_WEBHOOK_TARGETS = []
+# Webhook
+WEBHOOK_TARGETS=[]
+WEBHOOK_ENABLED=false
+WEBHOOK_EXCLUDED=[]
+WEBHOOK_TIMEOUT=15.0
+
+# Auth
+AUTH_METHOD="none"
+AUTH_SECRET_KEY=""
+
+# Database
+DATABASE_POSTGRES_DSN='postgres://subscriby:subscriby@database:5432/subscriby'
+
+# ----
 
 # Docker compose
 PWD="./"
@@ -13,18 +22,10 @@ COMPOSE_EXPOSED_PORT=80
 
 # Process manager (Gunicorn)
 PROC_OS_NAME="subscriby-backend-api"
-PROC_BIND_HOST = "0.0.0.0"
-PROC_BIND_PORT = 80
-PROC_LOG_ACCESS = "-"
-PROC_LOG_ERROR = "-"
-PROC_LOG_LEVEL = "info"
-PROC_LOG_FORMAT = '%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
-PROC_PERF_WORKERS = 1  # Set to 0 for auto set by CPU corse
-
-# Database.
-DATABASE_HOST=database
-DATABASE_PASSWORD=subscriby
-DATABASE_NAME=subscriby
-DATABASE_USER=subscriby
-DATABASE_DB=subscriby
-DATABASE_PORT=5432
+PROC_BIND_HOST="0.0.0.0"
+PROC_BIND_PORT=80
+PROC_LOG_ACCESS="-"
+PROC_LOG_ERROR="-"
+PROC_LOG_LEVEL="info"
+PROC_LOG_FORMAT='%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
+PROC_PERF_WORKERS="1  # Set to 0 for auto set by CPU corse"
