feat(api): :sparkles: Fix example env

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -28,4 +28,4 @@ PROC_LOG_ACCESS="-"
 PROC_LOG_ERROR="-"
 PROC_LOG_LEVEL="info"
 PROC_LOG_FORMAT='%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
-PROC_PERF_WORKERS="1  # Set to 0 for auto set by CPU corse"
+PROC_PERF_WORKERS="1"  # Set to 0 for auto set by CPU corse
