feat(api): :ambulance: Fix configuration of the database

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -11,7 +11,7 @@ AUTH_METHOD="none"
 AUTH_SECRET_KEY=""
 
 # Database
-DATABASE_POSTGRES_DSN='postgres://subscriby:subscriby@database:5432/subscriby'
+DATABASE_POSTGRES_DSN='postgresql://subscriby:subscriby@database:5432/subscriby'
 
 # ----
 
